Partition diagram: fix for 'fat' classed titles with negative values cutting off their content bar on the right. Also fixed placement of negative right title content in IE.

--- a/src/charts/d3.scss
+++ b/src/charts/d3.scss
@@ -232,14 +232,18 @@ a.boxclose {
 .partition-content.negative-value{
   background-image: repeating-linear-gradient(-45deg, transparent, transparent 1px, rgba(8, 40, 86,.5) 1px, rgba(8, 40, 86,.5) 5px);
 }
-.partition-negative-title-backing{
+.partition-negative-title-backing.fat:not(.partition-right-ie-fix){
+  display: inherit;
+  align-items: inherit;
+}
+.partition-negative-title-backing:not(.fat){
     align-items: center;
     background-color: rgb(4, 18, 37) ;
     display: flex;
     height: 100%;
     margin-left: 20px;
 }
-.partition-negative-title-backing > .partition-content-title{
+.partition-negative-title-backing:not(.fat) > .partition-content-title{
   margin-left: 0px;
 }
 .partition-content-title.negative-value {
